# Python_vehicle_equipment_parameter_classifier

./: .gitignore
PythonProject/: DataSetSource.py  base_examples.csv  diesels.csv  electro.csv  engine_descriptions.csv  engine_types.csv  engine_types_final_data_set.csv  ethanol_engine.csv  extras.csv  gas.csv  gasoline.csv  hours_list.csv  hybrid_engine.csv  main.py  main_script.py  ml_dtypes-0.5.3-cp314-cp314-win_amd64.whl  prices.csv  pyproject.toml  transport_categories.csv  transport_conditions.csv  vehicle_advertisement_templates.csv  vehicle_advertisement_templates_v2.csv  vehicle_advertisement_templates_v3.csv  vehicle_advertisement_templates_v4.csv  years.csv
PythonProject/training/: classifier_training.py
