[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "datasets>=4.3.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "mypy>=1.11",
    "numpy>=2.3.4",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "ort>=1.2.1",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "skl2onnx>=1.19.1",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
